# EXRDemux

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  future-ae-plugin-brief.md  vcpkg.json
cmake/: MacInfoPlist.in
cmake/overlay-triplets/: arm64-osx.cmake
docs/: mac_setup.md
scripts/: SplitAndSortPassesToPrecomps.jsx
scripts/dev/: luminance_centroid.py
src/: exrdemux.cpp  exrdemux.r  exrdemux_dialog.h  exrdemux_dialog.rc  exrdemux_dialog_mac.mm  exrdemux_dialog_win.cpp
testfiles/: testfileAE.aep
testfiles/Adobe After Effects Auto-Save/: testfileAE auto-save 1.aep  testfileAE auto-save 2.aep  testfileAE auto-save 3.aep  testfileAE auto-save 4.aep
tests/: README.md
tests/jsx/: 01_inspect_effect.jsx  02_set_channels.jsx  03_extract_all_layers.jsx  04_exrdemux_scripting.jsx  05_hash_persistence.jsx  exrdemux_helpers.jsx
tests/python/: dump_exr_channels.py
